<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能家居</string>
    <string name="app_copyright">Copyright @ 2015 By MySmartHome</string>    
    <string name="app_provision">使用条款和隐私政策</string>    
    <string name="scene_name">情景模式名字</string>
    <string name="error">未知错误</string>
    <string name="scene_selector">选择要关联的终端</string>
    <string name="edit_scene_device">编辑终端属性</string>
    <string name="selector_icon">选择图标</string>
    <string name="selector_all">全选</string>
    <string name="selector_no_all">全不选</string>
    <string name="selector_associate">确认关联</string>
    <string name="remove">移除</string>
    <string name="selector_icon_background">选择图标背景色</string>
    <string name="register_name">通过手机号注册</string>
    <string name="register_recall">目前只支持国内手机号注册</string>
    <string name="register_phone">请填写手机号码</string>
    <string name="register_verify_code_title">填写验证码</string>
    <string name="register_verify_code">请输入验证码</string>
    <string name="register_rev_verify_code">接受短信大约需要%d秒钟</string>
    <string name="register_rev_no_verify_code">接受不到短信？</string>
    <string name="register_send_verify_code_prefix">我们已经发送了</string>
    <string name="verify_code">验证码</string>
    <string name="register_send_verify_code_suffix">到你的手机：</string>
    <string name="email_send_verify_code_suffix">到你的邮箱：</string>
    <string name="reget_verify_code">重新获取验证码</string>
    <string name="login_username">账号/手机号/邮箱</string>
    <string name="login_password">密码</string>
    <string name="login_btnname">登录</string>
    <string name="local_login_btnname">本地登录</string>
    <string name="register_btnname">免费注册</string>
    <string name="forgot_password">忘记密码？</string>    
    <string name="forgot_password_title">通过手机号找回密码</string>    
    <string name="forgot_password_recall">请输入要找回密码的手机号</string>
    <string name="login_recall_password">记住密码</string>
    <string name="batch_edit_name">批量修改</string>
    <string name="cancel_select_name">取消连接</string>
    <string name="match_device_name">匹配到以下终端</string>
    <string name="terminal_device_name">终端名字</string>
    <string name="terminal_device_type">终端类型</string>
    <string name="terminal_device_zone">所在区域</string>
    <string name="terminal_device_uid">终端Id号</string>
    <string name="main_device_name">主控名字</string>
    <string name="main_device_uid">主控Id号</string>
    <string name="main_device_wifi_ssid">SSID</string>
    <string name="main_device_wifi_password">密码</string>
    <string name="main_device_wifi_name">wifi设置</string>
    <string name="hrift_flow_mode">省流模式</string>
    <string name="device_name">设备名字</string>
    <string name="selector_zone_name">区域选择</string>
    <string name="save_name">保存</string>
    <string name="edit_name">编辑</string>
    <string name="search_name">连接主控制器</string>
    <string name="search_reason">接通电源，设备指示灯闪烁时点击下一步</string>
    <string name="next_name">下一步</string>
    <string name="new_zone_name">新增区域</string>
    <string name="cancel_conn_name">取消连接</string>
    <string name="cancel_name">取消</string>
    <string name="ok">确定</string>
    <string name="prompt_name">提示</string>
    <string name="add_ok">确定添加</string>
    <string name="relogin_name">重新登录</string>
    <string name="still_conn_name">仍然连接</string>
    <string name="ok_name">完成</string>
    <string name="reset_name">重试</string>
    <string name="reset_rename">重命名</string>
    <string name="setting_name">设置名字</string>
    <string name="ljwifi_name">连接WLAN</string>
    <string name="ljwifi_reason">选择一个可用的WLAN，让设备接入网络</string>
    <string name="conn_ok">连接成功</string>
    <string name="reconn_name">重新连接</string>
    <string name="conn_failure">连接失败</string>
    <string name="ljcloud_name">路由器正在尝试与云端建立连接</string>
    <string name="ljcloud_ok_reason">手机可以和云端进行通信</string>
    <string name="ljcloud_failure_reason">手机无法和云端进行通信，请检查你的路由器是否可以上网</string>
    <string name="ljrouter_name">手机正在尝试与路由器建立连接</string>
    <string name="ljrouter_ok_reason">手机可以和路由器进行通信</string>
    <string name="ljrouter_failure_reason">手机无法和路由器进行通信\n请检查你输入的wifi密码</string>
    <string name="connection_name">连接主控制器</string>
    <string name="connection_reason">正在努力为您连接中…</string>
    <string name="confirm_name">确认</string>
    <string name="local_selector_type">选择</string>
    <string name="monitor_name">监控</string>
    <string name="delete">删除</string>
    <string name="loading">加载中......</string>
    <string name="dialog_quit_title">确定要退出吗？</string>
    <string name="dialog_quit">退出</string>
    <string name="dialog_server_quit_msg">退出当前账号后不会删除任何历史数据，下次登录依然可以使用本账号。</string>
    <string name="dialog_local_quit_msg">退出本地登录后不会删除任何历史数据，下次登录依然可以查看。</string>
    <string name="dialog_local_login_msg">本地登录不支持此功能.</string>
    <string name="dialog_run">后台运行</string>
    <string name="dialog_cancel">取消</string>
    <string name="status_open">状态：开</string>
    <string name="status_close">状态：关</string>
    <string name="not_exist_phone">该手机号还没注册，是否以此手机号进行注册？</string>
    <string name="exist_phone">该手机号已注册，是否以此手机号进行登录？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="reset_password_ok">密码修改成功.</string>
    <string name="register_ok">注册成功,请登录.</string>
    <string name="reset_password_error">密码修改失败.</string>
    <string name="register_error">注册失败.</string>
    <string name="usernum_and_password_no_null">账号和密码不能为空.</string>
    <string name="open_network">请先开启网络.</string>
    <string name="enter_the_phone_number">请输入大陆的手机号码.</string>
    <string name="enter_the_security_code">请输入手机验证码.</string>
    <string name="enter_the_password">请输入新密码以修改</string>
    <string name="error_ecurity_code">验证失败，原因：%s.</string>
    <string name="downloading">正在下载</string>
    <string name="login_loading">正在登录中…</string>
    <string name="conn_loading">正在连接中…</string>
    <string name="monitor_title">当前视频：</string>
    <string name="version_name">当前版本：</string>
    <string name="can_not_find_version_name">当前版本：1.0.0</string>
    <string name="version_number_name">版本号：</string>
    <string name="new_version_download">新版本已下载完成。</string>
    <string name="new_version_title">版本升级</string>
    <string name="version_update">版本更新</string>
    <string name="version_detection">版本检测中…</string>
    <string name="find_new_version">发现新版本</string>
    <string name="is_new_version">已是最新版本</string>
    <string name="ignore">忽略</string>
    <string name="update_now">立即更新</string>
    <string name="update_download_now">立即下载并更新</string>
    <string name="wifi_succeed">设置成功</string>
    <string name="wifi_ssid_null">网络SSID不能为空</string>
    <string name="wifi_ssid_passwd_null">网络SSID和密码不能为空</string>
    <string name="wifi_passwd_null">密码不能为空</string>
    <string name="wifi_null">暂时不支持开放性wifi</string>
    <string name="add_terminal_device">添加终端</string>
    <string name="add_main_device">添加主控</string>
    <string name="learn_device">匹配终端</string>
    <string name="about">关于</string>
    <string name="add_infrared_device">添加红外设备</string>
    <string name="advanced_settings">更多设置</string>
    <string name="camera_management">摄像头管理</string>
    <string name="infrared_device_management">红外遥控管理</string>
    <string name="edit_scene_name">编辑情景模式</string>
    <string name="add_scene_name">新建情景模式</string>
    <string name="main_device_management">主控管理</string>
    <string name="scene_management">情景模式管理</string>
    <string name="terminal_device_management">终端管理</string>
    <string name="zone_management">区域管理</string>
    <string name="common_problem">常见问题</string>
    <string name="feedback ">意见反馈</string>
    <string name="type_master ">集成型智能主控</string>
    <string name="type_strips ">智能插线板</string>
    <string name="type_socket ">普通插座</string>
    <string name="type_dimmablelights ">可调光灯</string>
    <string name="type_switch ">普通开关</string>
    <string name="undefined ">未定义</string>
    <string name="find_not_usernum">找不到此账号.</string>
    <string name="error_password">密码错误.</string>
    <string name="conn_not_server">连接不到服务器.</string>
    <string name="user_rename">个人信息</string>
    <string name="user_binding">账号绑定</string>
    <string name="user_login">最近登录设备</string>
    <string name="user_jurisdiction">权限管理</string>
    <string name="user_quit">退出当前账号</string>
    <string name="log_user_quit">退出本地登录</string>
    <string name="add_jurisdiction">添加新的联系人</string>
    <string name="jurisdiction_name">联系人名字</string>
    <string name="jurisdiction_phone">手机号码</string>
    <string name="selector_jurisdiction">从手机通讯录中选择要添加的联系人</string>
    <string name="no_setting">未设置</string>
    <string name="no_binding">未绑定</string>
    <string name="avatar">头像</string>
    <string name="name">名字</string>
    <string name="binding_phone">绑定手机</string>
    <string name="binding_emil">安全邮箱</string>
    <string name="basic_info">基本资料</string>
    <string name="security_info">密保资料</string>
    <string name="binding_func">绑定功能</string>
    <string name="SinaWeibo">新浪微博</string>
    <string name="jurisdiction_null">联系人名字和号码不能为空.</string>
    <string name="name_null">名字不能为空.</string>
    <string name="rename_email_title">更换安全邮箱</string>
    <string name="rename_phone_title">更换绑定手机</string>
    <string name="selector_pictures">选择图片</string>
    <string name="selector_dicm">从相册中选择</string>
    <string name="photograph">拍照</string>
    <string name="replace_avatar">更换头像</string>
    <string name="send_SMS">发送短信</string>
    <string name="secure_authentication_title">账号安全验证</string>
    <string name="user_authentication_title">账号身份验证</string>
    <string name="secure_authentication_msg">为了保护账号安全，需要验证手机有效性</string>
    <string name="secure_authentication_tips">点击发送短信按钮，将会发送一条有验证码的短信至手机</string>
    <string name="no_init">页面尚未完全初始化</string>
    <string name="secure_authentication_code">请使用安全手机%s获取验证码短信</string>
    <string name="enter_rename_email">请输入要更换的安全邮箱</string>
    <string name="enter_rename_phone">请输入要更换的手机号码</string>
    <string name="error_rename_phone">该手机号码已经绑定。</string>
    <string name="error_rename_email">该邮箱已经绑定。</string>
    <string name="theme">个性主题</string>
    <string name="theme_default">默认皮肤</string>
    <string name="theme_nighttime">夜间皮肤</string>
    <string name="theme_GEM">邓紫棋</string>
    <string name="theme_spring">春</string>
    <string name="theme_summer">夏</string>
    <string name="theme_autumn">秋</string>
    <string name="theme_winter">冬</string>
    <string name="theme_apply">立刻使用</string>
    <string name="theme_applying">正在使用</string>
    
    <string name="rename_email_msg">更换安全邮箱，需要验证您的身份信息</string>
    <string name="rename_phone_msg">更换绑定手机，需要验证您的身份信息</string>
    <string name="local_login_msg">尊敬的用户，您好！\n手机没有接受到来着主控的信息。\n你确认主控已经开机并且加入热点模式了吗？\n你确认你的手机已经连接到主控发出的wifi了吗？主控发出的wifi名字一般为\"%s_5401XXXXXX\"\n请你点击【重新登陆】按钮再一次本地登录或者点击【取消】返回页面重新选择操作。</string>
    <string name="addmaindevice_login_msg">尊敬的用户，您好！\n我们发现你目前登录账号无主控。\n你需要添加至少一个主控才能继续使用，否则退出此应用。\n请你点击【确定添加】按钮跳转到添加主控页面进行添加或者点击【退出】按钮退出此应用。</string>
    
</resources>
