<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content"
    android:background="@color/title_background"
    android:orientation="vertical" >
    
    <RelativeLayout
    	android:layout_width="match_parent"
    	android:layout_height="@dimen/DIMEN_56PX"
    	android:background="@android:color/transparent">
	
    	<ImageView        
        	android:id="@+id/register_back"
        	android:layout_width="@dimen/DIMEN_56PX"
        	android:layout_height="@dimen/DIMEN_56PX"
        	android:layout_gravity="start"
        	android:layout_alignParentLeft="true"
        	android:layout_alignParentStart="true"
        	android:onClick="onClick"
        	android:contentDescription="@string/app_name"
       		android:background="@drawable/drawer_selector"
        	android:src="@drawable/ic_arrow_left_white_24dp"
        	android:scaleType="centerInside" />
    
    	<TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/DIMEN_56PX"
            android:paddingLeft="@dimen/DIMEN_72PX"
            android:paddingStart="@dimen/DIMEN_72PX"
    		android:paddingRight="@dimen/DIMEN_16PX"
    		android:paddingEnd="@dimen/DIMEN_16PX"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/register_name" />
    
</RelativeLayout>
    
    <TextView
                android:id="@+id/tv_register_recall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/DIMEN_24PX"
                android:textColor="@color/white"
                android:text="@string/register_recall" />
    
    <com.yh.materialdesign.edittext.MaterialEditText
            android:id="@+id/met_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/DIMEN_12PX"
            android:layout_marginBottom="@dimen/DIMEN_12PX"
            android:layout_marginLeft="@dimen/DIMEN_48PX"
            android:layout_marginRight="@dimen/DIMEN_48PX"
            android:hint="@string/register_phone"
            android:drawableRight="@drawable/ic_close_circle_white_24dp"
            android:drawableEnd="@drawable/ic_close_circle_white_24dp"
            android:inputType="phone"
            app:baseColor="@color/white"
            app:floatingLabel="highlight"
            app:maxCharacters="11"
            app:primaryColor="@color/white"
            app:singleLineEllipsis="true" />
    
    <com.yh.materialdesign.edittext.MaterialEditText
            android:id="@+id/met_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/DIMEN_12PX"
            android:layout_marginBottom="@dimen/DIMEN_12PX"
            android:layout_marginLeft="@dimen/DIMEN_48PX"
            android:layout_marginRight="@dimen/DIMEN_48PX"
            android:hint="@string/main_device_wifi_password"
            android:divider="@null"
            android:inputType="textPassword"
            android:dropDownSelector="@drawable/list_selector"
            android:drawableRight="@drawable/ic_eye_grey600_24dp"
            android:drawableEnd="@drawable/ic_eye_grey600_24dp"
            android:drawablePadding="@dimen/DIMEN_8PX"
            app:baseColor="@color/white"
            app:maxCharacters="12"
            app:floatingLabel="highlight"
            app:primaryColor="@color/white"/>
    
    <TextView
                android:id="@+id/tv_register_verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/DIMEN_24PX"
                android:textColor="@color/white"
                android:text="@string/register_rev_verify_code" />
    
    <com.yh.materialdesign.views.ButtonFlat
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/DIMEN_48PX"
            android:background="@color/white"
            android:layout_marginLeft="@dimen/DIMEN_48PX"
            android:layout_marginRight="@dimen/DIMEN_48PX"
            android:text="@string/next_name"/>

</LinearLayout>
