<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/material_card"
    android:orientation="vertical" >
    
    <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/DIMEN_56PX"
            android:gravity="center"
            android:textColor="@color/title_background"
            android:textSize="@dimen/default_text_size"
            android:text="@string/reset_rename" />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            android:text="-----------------------------------------------------------------------------------------------------" />	
    <LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical" 
        	android:layout_marginLeft="@dimen/DIMEN_16PX"
        	android:layout_marginRight="@dimen/DIMEN_16PX"
        	android:layout_marginBottom="@dimen/DIMEN_16PX">
        	
        <View
            android:layout_width="match_parent"
        	android:layout_height="@dimen/DIMEN_16PX" />
        
    	    <LinearLayout        
    	        android:id="@+id/ll_edit"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:orientation="horizontal" 
        		android:visibility="gone"
        		android:gravity="center_vertical" >

				<com.yh.materialdesign.edittext.MaterialEditText
            			android:id="@+id/met_zone"
            			android:layout_width="0dp"
            			android:layout_height="wrap_content"
            			android:layout_weight="1"
            			android:hint="@string/selector_zone_name"
            			android:divider="@null"
            			android:inputType="text"
            			android:enabled="false"
            			android:dropDownSelector="@drawable/list_selector"
            			android:drawablePadding="8dp"
            			app:baseColor="@color/title_background"
            			app:maxCharacters="12"
            			app:floatingLabel="highlight"
            			app:primaryColor="@color/title_background"/>

					<com.yh.materialdesign.views.ButtonFlat
            			android:id="@+id/btn_selector_zone"
            			android:layout_width="wrap_content"
            			android:layout_height="@dimen/DIMEN_48PX"
            			android:background="@color/title_background"
            			android:text="@string/local_selector_type"/>
				</LinearLayout>
	
				<com.yh.materialdesign.edittext.MaterialEditText
            		android:id="@+id/met_device_name"
            		android:layout_width="match_parent"
            		android:layout_height="wrap_content"
            		android:hint="@string/device_name"
            		android:divider="@null"
            		android:inputType="text"
            		android:dropDownSelector="@drawable/list_selector"
            		android:drawablePadding="8dp"
            		app:baseColor="@color/title_background"
            		app:maxCharacters="12"
            		app:floatingLabel="highlight"
            		app:primaryColor="@color/title_background"/>
        </LinearLayout>  
    
    <LinearLayout
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="@color/white"
        	android:gravity="center_vertical|end"
        	android:orientation="horizontal" >           
                
            <Button 
            	android:id="@+id/btn_cancel"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"     
            	android:padding="@dimen/DIMEN_10PX"
            	android:text="@string/cancel_name"
            	android:textSize="@dimen/reason_text_size"
            	android:layout_marginRight="@dimen/DIMEN_20PX"
            	android:layout_marginEnd="@dimen/DIMEN_20PX"
            	android:textColorHighlight="@color/white"
            	android:textColor="@color/gray"
            	style="?android:attr/buttonBarButtonStyle"
            	android:background="@drawable/button" />
            
            <Button 
            	android:id="@+id/btn_save"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content" 
            	android:text="@string/save_name"
            	android:textSize="@dimen/reason_text_size"
            	android:padding="@dimen/DIMEN_10PX"
            	android:textColorHighlight="@color/white"
            	style="?android:attr/buttonBarButtonStyle"
            	android:textColor="@color/title_background"
            	android:background="@drawable/button" />
                        
        </LinearLayout>
</LinearLayout>
